Добавила в pom зависимость, заработал мок для CatTest